--- a/T2Proyecto/src/main/resources/templates/empleado/index.html
+++ b/T2Proyecto/src/main/resources/templates/empleado/index.html
@@ -18,10 +18,11 @@
 
 	<div class="content">
 		<div class="container mt-4">
+		<br> <br> <br>
 			<form th:action="@{/empleado/form}" th:object="${empleado}"
 				method="post" class="needs-validation" novalidate>
 				<div class="card">
-					<div class="card-header bg-info text-white">Datos del Empleado</div>
+					<div class="card-header color-barra text-white">Datos del Empleado</div>
 					<div class="card-body">
 						<div class="row">
 
@@ -47,7 +48,7 @@
 						<br>
 						<div class="row">
 							<div class="col-12 text-center">
-								<button type="submit" class="btn btn-dark">
+								<button type="submit" class="btn btn-warning">
 									<i class="fas fa-save"></i> Guardar Empleado
 								</button>
 							</div>
@@ -55,9 +56,9 @@
 					</div>
 				</div>
 			</form>
-			<br>
+			<br> <br> <br> <br> <br> <br> 
 			<div class="card">
-				<div class="card-header bg-info text-white">Empleados Registrados</div>
+				<div class="card-header color-barra	 text-white">Empleados Registrados</div>
 				<div class="card-body">
 					<div class="table-responsive">
 						<table class="table table-bordered table-hover">
