--- a/T2Proyecto/src/main/resources/templates/categoria/index.html
+++ b/T2Proyecto/src/main/resources/templates/categoria/index.html
@@ -17,9 +17,11 @@
 
 	<div class="content">	
 	<div class="container mt-4">
+	
+	<br> <br> <br>
       	<form th:action="@{/categoria/form}" th:object="${categoria}" method="post" class="needs-validation" novalidate>
 					<div class="card">
-						<div class="card-header bg-info text-white">Datos de la Categoría</div>
+						<div class="card-header color-barra text-white">Datos de la Categoría</div>
 						<div class="card-body">
 								<div class="row">	
 									<div class="col-md-6 mb-3">
@@ -32,7 +34,7 @@
 								<br>
 								<div class="row">
 									<div class="col-12 text-center">
-										<button type="submit" class="btn btn-dark">
+										<button type="submit" class="btn btn-warning">
 											<i class="fas fa-save"></i> Guardar Usuario
 										</button>
 									</div>
@@ -40,9 +42,9 @@
 						</div>
 					</div>
 				</form>
-				<br>
+				<br> <br> <br> <br> <br> <br> <br> <br>
 				<div class="card">
-					<div class="card-header bg-info text-white">Categorías Registradas</div>
+					<div class="card-header color-barra text-white">Categorías Registradas</div>
 					<div class="card-body">
 						<div class="table-responsive">
 							<table class="table table-bordered table-hover">
