--- a/T2Proyecto/src/main/resources/templates/tienda/index.html
+++ b/T2Proyecto/src/main/resources/templates/tienda/index.html
@@ -15,15 +15,16 @@
 	<div class="sidebar" th:replace="Layouts/fragmentos :: Tercerfragment"></div>
 	<!--sidebar end-->
 	
-	<br><br><br>
+
+	<div class="content">	
 	
 	<div class="container mt-4">
-
+		<br> <br> <br>	
       	<form th:action="@{/tienda/form}" th:object="${tienda}" method="post" class="needs-validation" novalidate>
 
 					<div class="card">
 
-						<div class="card-header bg-info text-white">Datos de la Categoría</div>
+						<div class="card-header text-white color-barra" >Datos de la Categoría</div>
 
 						<div class="card-body">
 
@@ -91,7 +92,7 @@
 
 								<div class="col-12 text-center">
 
-									<button type="submit" class="btn btn-dark">
+									<button type="submit" class="btn btn-warning">
 
 										<i class="fas fa-save"></i> Guardar Categoría
 
@@ -107,11 +108,11 @@
 
 				</form>
 				
-				<br>
+				<br> <br> <br> <br> <br> <br>
 				
 				<div class="card">
 
-					<div class="card-header bg-info text-white">Categorías Registradas</div>
+					<div class="card-header text-white color-barra">Categorías Registradas</div>
 
 					<div class="card-body">
 
@@ -252,7 +253,7 @@
 			</div>
 
       </div>
-
+	</div>
 	<script type="text/javascript" th:src="@{/js/nav.js}"></script>
 	<script type="text/javascript" th:src="@{/js/tienda.js}"></script>
 
