--- a/T2Proyecto/bin/src/main/resources/templates/usuario/index.html
+++ b/T2Proyecto/bin/src/main/resources/templates/usuario/index.html
@@ -49,7 +49,7 @@
 				</form>
 				<br>
 				<div class="card">
-					<div class="card-header bg-info text-white">Categorías Registradas</div>
+					<div class="card-header bg-info text-white">Usuarios Registrados</div>
 					<div class="card-body">
 						<div class="table-responsive">
 							<table class="table table-bordered table-hover">
