--- a/T2Proyecto/src/main/resources/templates/usuario/index.html
+++ b/T2Proyecto/src/main/resources/templates/usuario/index.html
@@ -19,7 +19,7 @@
 	<div class="container mt-4">
       	<form th:action="@{/usuario/form}" th:object="${usuario}" method="post" class="needs-validation" novalidate>
 					<div class="card">
-						<div class="card-header bg-info text-white">Datos del Usuario</div>
+						<div class="card-header color-barra text-white">Datos del Usuario</div>
 						<div class="card-body">
 							<div class="row">
 								
@@ -39,7 +39,7 @@
 							<br>
 								<div class="row">
 								<div class="col-12 text-center">
-									<button type="submit" class="btn btn-dark">
+									<button type="submit" class="btn btn-warning">
 										<i class="fas fa-save"></i> Guardar Usuario
 									</button>
 								</div>
@@ -49,7 +49,7 @@
 				</form>
 				<br>
 				<div class="card">
-					<div class="card-header bg-info text-white">Usuarios Registrados</div>
+					<div class="card-header color-barra text-white">Usuarios Registrados</div>
 					<div class="card-body">
 						<div class="table-responsive">
 							<table class="table table-bordered table-hover">
