--- a/T2Proyecto/src/main/resources/templates/tienda/index.html
+++ b/T2Proyecto/src/main/resources/templates/tienda/index.html
@@ -17,9 +17,11 @@
 	
 	<div class="content">
 	<div class="container mt-4">
+	<br>
+	<br>
       	<form th:action="@{/tienda/form}" th:object="${tienda}" method="post" class="needs-validation" novalidate>
 					<div class="card">
-						<div class="card-header bg-info text-white">Datos de la Tienda</div>
+						<div class="card-header color-barra text-white">Datos de la Tienda</div>
 						<div class="card-body">
 							<div class="row">
 								<div class="col-md-6 mb-3">
@@ -52,7 +54,7 @@
 							<br> 
 							<div class="row">
 								<div class="col-12 text-center">
-									<button type="submit" class="btn btn-dark">
+									<button type="submit" class="btn btn-warning">
 										<i class="fas fa-save"></i> Guardar Tienda
 									</button>
 								</div>
@@ -61,8 +63,13 @@
 					</div>
 				</form>
 				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
 				<div class="card">
-					<div class="card-header bg-info text-white">Tiendas Registradas</div>
+					<div class="card-header color-barra text-white">Tiendas Registradas</div>
 					<div class="card-body">
 						<div class="table-responsive">
 							<table class="table table-bordered table-hover">
