--- a/T2Proyecto/src/main/resources/templates/usuario/index.html
+++ b/T2Proyecto/src/main/resources/templates/usuario/index.html
@@ -90,7 +90,7 @@
 				data-backdrop="static">
 				<div class="modal-dialog modal-lg" role="document">
 					<div class="modal-content">
-						<div class="modal-header bg-info text-white">
+						<div class="modal-header color-barra text-white">
 							<h5 class="modal-title">Editar Categoría</h5>
 							<button type="button" class="close" data-dismiss="modal"
 								aria-label="Close">
