--- a/T2Proyecto/src/main/resources/templates/empleado/index.html
+++ b/T2Proyecto/src/main/resources/templates/empleado/index.html
@@ -94,7 +94,7 @@
 			<div id="editarEmpleado" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" data-backdrop="static">
 			  <div class="modal-dialog modal-lg" role="document">
 			    <div class="modal-content">
-			      <div class="modal-header bg-info text-white">
+			      <div class="modal-header color-barra text-white">
 			        <h5 class="modal-title">Editar Empleado</h5>
 			        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
 			          <span aria-hidden="true">&times;</span>
