--- a/T2Proyecto/src/main/resources/templates/usuario/index.html
+++ b/T2Proyecto/src/main/resources/templates/usuario/index.html
@@ -91,7 +91,7 @@
 				<div class="modal-dialog modal-lg" role="document">
 					<div class="modal-content">
 						<div class="modal-header color-barra text-white">
-							<h5 class="modal-title">Editar Categoría</h5>
+							<h5 class="modal-title">Editar Usuario</h5>
 							<button type="button" class="close" data-dismiss="modal"
 								aria-label="Close">
 								<span aria-hidden="true">&times;</span>
@@ -106,7 +106,7 @@
 										<label>Nombre:</label> <input name="nombre" id="txtNombre"
 											type="text" class="form-control" placeholder="Ingrese nombre"
 											minlength="1" maxlength="50" required="required" />
-										<label>Dirección:</label> <input name="contrasena" id="txtDireccion"
+										<label>Contraseña:</label> <input name="contrasena" id="txtDireccion"
 											type="password" class="form-control" placeholder="Ingrese dirección"
 											minlength="1" maxlength="50" required="required" />	
 										<div class="invalid-feedback">Nombre inválido</div>
