--- a/T2Proyecto/src/main/resources/templates/tienda/index.html
+++ b/T2Proyecto/src/main/resources/templates/tienda/index.html
@@ -110,7 +110,7 @@
 				<div class="modal-dialog modal-lg" role="document">
 					<div class="modal-content">
 						<div class="modal-header color-barra text-white">
-							<h5 class="modal-title">Editar Categoría</h5>
+							<h5 class="modal-title">Editar Tienda</h5>
 							<button type="button" class="close" data-dismiss="modal"
 								aria-label="Close">
 								<span aria-hidden="true">&times;</span>
