Casi terminado productos

--- a/T2Proyecto/src/main/resources/templates/layouts/fragmentos.html
+++ b/T2Proyecto/src/main/resources/templates/layouts/fragmentos.html
@@ -92,6 +92,7 @@
                                     <a class="nav-link" th:href="@{/categoria/}"><i class="fas fa-filter"></i><span>Categoria</span></a>
                                     <a class="nav-link" th:href="@{/tienda/}"><i class="fas fa-store"></i><span>Tienda</span></a>
                                     <a class="nav-link" th:href="@{/empleado/}"><i class="fas fa-pray"></i><span>Empleado</span></a>
+                                    <a class="nav-link" th:href="@{/productos/}"><i class="fas fa-wine-bottle"></i><span>Productos</span></a>
                                 </nav>
                             </div>
                             
