--- a/T2Proyecto/src/main/resources/templates/usuario/index.html
+++ b/T2Proyecto/src/main/resources/templates/usuario/index.html
@@ -75,7 +75,8 @@
 								   	<td th:text="${item.nombre}"></td>
 								   	<td th:text="${item.contrasena}"></td>
 								   	<td class="text-center">
-								   		<a href="#" th:id="${item.id}" th:param1="${item.nombre}" th:param2="${item.contrasena}" class="btn btn-warning editarUsuario"><i class="fas fa-edit"></i> Editar</a>
+								   		<a href="#" th:id="${item.id}" th:param1="${item.nombre}" th:param2="${item.contrasena}" 
+								   		class="btn btn-warning editarUsuario"><i class="fas fa-edit"></i> Editar</a>
 								   	</td>
 								  </tr>
 							 	</tbody>
